# EndfieldGacha

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_en.md  app.py  client.py  core.py  demo.py  distribution.py  evaluation.py  examination.py  package-lock.json  package.json  pyproject.toml  ref.md  requirements.txt  run.py  scheduler.py  server.py  start.bat  start.ps1  start.sh  策略评分系统设计方案.md
app/: AGENTS.md
cli/: __init__.py  _demo_char.py  _demo_ui.py  _demo_weapon.py  demo.py  evaluation.py  evaluation_examples.json  examination.py
config/: char_pool.json  constants.json  gacha_rules.json
configs/: AGENTS.md  arrange1  arrangement  char_pool_base.json  constants.json  weapon_pool_base.json
data/: baseline_cache.db-shm  baseline_cache.db-wal  scoring_cache.json
doc/: cross-pool-evaluation-result-page-design.md  developer-reference.md  mechanics.md  mechanics_en.md  strategy_protocol.md  卡池机制说明.md  抽卡策略评分系统设计方案_V2.0.md  新评分系统.txt  策略评分系统设计方案legacy.md
gacha_core/: AGENTS.md  __init__.py  _schemas.py  char.py  config.py  models.py  pool_utils.py  randomizer.py  weapon.py
legacy/: README.md
scheduler/: AGENTS.md  __init__.py  baseline.py  cache.py  cache_db.py  display.py  engine.py  models.py  scoring.py  strategy.py  strategy_protocol.py  strategy_rules.py  strategy_v2.py  workers.py
scripts/: start.bat  start.ps1  start.sh
server/: AGENTS.md  __init__.py  app.py  resource.py  routes.py  user.py
test/: compress_test.py  core_gacha_test.py  display_test.py  eval_render_test.cjs  eval_routes_test.py  (+3 more)
(+142 files in other folders)
